# aoc-builtin-rms

./: CHANGELOG.md  CMakeLists.txt  Makefile  aoc-builtin-rms.c  aoc-builtin-rms.h  call_conventions.h  dll.c  hook.c  hook.h  main.c  main.def  readme.md
.github/workflows/: ci.yml
include/: mmmod.h
include/ezxml/: ezxml.c
test/: aoc-builtin-rms.xml  language.ini  sample.per
